# edge_detection_ros_challenge

./: README.md
edge_detection/: CMakeLists.txt  package.xml
edge_detection/include/edge_detection/: EdgeDetector.hpp
edge_detection/launch/: edge_detection_launch.launch
edge_detection/msg/: edge_detect_msg.msg
edge_detection/rviz/: edge_detection_rviz.rviz
edge_detection/src/: EdgeDetector.cpp  edge_detection_client.cpp  edge_detection_publisher.cpp  edge_detection_service.cpp
edge_detection/srv/: edge_detect_srv.srv
